doc: update swagger for favorite and folder controller
